<resources>
    <string name="app_name">SipApp</string>
    <string name="config">Config</string>
    <string name="dialer">Dialer</string>
    <string name="account">Account</string>
    <string name="network">Network</string>
    <string name="addAccount">+</string>
    <string name="accountDone">OK</string>
    <string name="addAccountDone">OK</string>
    <string name="networkDone">OK</string>
    <string name="numOne">1</string>
    <string name="numTwo">2</string>
    <string name="numThree">3</string>
    <string name="numFour">4</string>
    <string name="numFive">5</string>
    <string name="numSix">6</string>
    <string name="numSeven">7</string>
    <string name="numEight">8</string>
    <string name="numNine">9</string>
    <string name="numZero">0</string>
    <string name="symbolStar">*</string>
    <string name="symbolHash">#</string>
    <string name="makingCall">Call</string>
    <string name="backwards">Back</string>
</resources>
